@@ -34,8 +34,129 @@ operator|.
 name|Test
 import|;
 end_import
+begin_import
+import|import
+name|org
+operator|.
+name|w3c
+operator|.
+name|dom
+operator|.
+name|Document
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|w3c
+operator|.
+name|dom
+operator|.
+name|Element
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|xml
+operator|.
+name|sax
+operator|.
+name|InputSource
+import|;
+end_import
+begin_import
+import|import
+name|javax
+operator|.
+name|xml
+operator|.
+name|parsers
+operator|.
+name|DocumentBuilder
+import|;
+end_import
+begin_import
+import|import
+name|javax
+operator|.
+name|xml
+operator|.
+name|parsers
+operator|.
+name|DocumentBuilderFactory
+import|;
+end_import
+begin_import
+import|import
+name|javax
+operator|.
+name|xml
+operator|.
+name|transform
+operator|.
+name|Transformer
+import|;
+end_import
+begin_import
+import|import
+name|javax
+operator|.
+name|xml
+operator|.
+name|transform
+operator|.
+name|TransformerFactory
+import|;
+end_import
+begin_import
+import|import
+name|javax
+operator|.
+name|xml
+operator|.
+name|transform
+operator|.
+name|dom
+operator|.
+name|DOMSource
+import|;
+end_import
+begin_import
+import|import
+name|javax
+operator|.
+name|xml
+operator|.
+name|transform
+operator|.
+name|stream
+operator|.
+name|StreamResult
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|StringReader
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|StringWriter
+import|;
+end_import
 begin_comment
-comment|/**Testcase for TikaEntityProcessor  *  * @since solr 1.5   */
+comment|/**Testcase for TikaEntityProcessor  *  * @since solr 3.1  */
 end_comment
 begin_class
 DECL|class|TestTikaEntityProcessor
@@ -45,6 +166,57 @@ name|TestTikaEntityProcessor
 extends|extends
 name|AbstractDataImportHandlerTestCase
 block|{
+DECL|field|conf
+specifier|private
+name|String
+name|conf
+init|=
+literal|"<dataConfig>"
+operator|+
+literal|"<dataSource type=\"BinFileDataSource\"/>"
+operator|+
+literal|"<document>"
+operator|+
+literal|"<entity processor=\"TikaEntityProcessor\" url=\""
+operator|+
+name|getFile
+argument_list|(
+literal|"solr-word.pdf"
+argument_list|)
+operator|.
+name|getAbsolutePath
+argument_list|()
+operator|+
+literal|"\">"
+operator|+
+literal|"<field column=\"Author\" meta=\"true\" name=\"author\"/>"
+operator|+
+literal|"<field column=\"title\" meta=\"true\" name=\"title\"/>"
+operator|+
+literal|"<field column=\"text\"/>"
+operator|+
+literal|"</entity>"
+operator|+
+literal|"</document>"
+operator|+
+literal|"</dataConfig>"
+decl_stmt|;
+DECL|field|tests
+specifier|private
+name|String
+index|[]
+name|tests
+init|=
+block|{
+literal|"//*[@numFound='1']"
+block|,
+literal|"//str[@name='author'][.='Grant Ingersoll']"
+block|,
+literal|"//str[@name='title'][.='solr-word']"
+block|,
+literal|"//str[@name='text']"
+block|}
+decl_stmt|;
 annotation|@
 name|BeforeClass
 DECL|method|beforeClass
@@ -82,39 +254,6 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|String
-name|conf
-init|=
-literal|"<dataConfig>"
-operator|+
-literal|"<dataSource type=\"BinFileDataSource\"/>"
-operator|+
-literal|"<document>"
-operator|+
-literal|"<entity processor=\"TikaEntityProcessor\" url=\""
-operator|+
-name|getFile
-argument_list|(
-literal|"solr-word.pdf"
-argument_list|)
-operator|.
-name|getAbsolutePath
-argument_list|()
-operator|+
-literal|"\">"
-operator|+
-literal|"<field column=\"Author\" meta=\"true\" name=\"author\"/>"
-operator|+
-literal|"<field column=\"title\" meta=\"true\" name=\"title\"/>"
-operator|+
-literal|"<field column=\"text\"/>"
-operator|+
-literal|"</entity>"
-operator|+
-literal|"</document>"
-operator|+
-literal|"</dataConfig>"
-decl_stmt|;
 name|runFullImport
 argument_list|(
 name|conf
@@ -127,13 +266,124 @@ argument_list|(
 literal|"*:*"
 argument_list|)
 argument_list|,
-literal|"//*[@numFound='1']"
+name|tests
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testIndexingWithTikaEntityProcessorThreaded
+specifier|public
+name|void
+name|testIndexingWithTikaEntityProcessorThreaded
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|DocumentBuilder
+name|builder
+init|=
+name|DocumentBuilderFactory
+operator|.
+name|newInstance
+argument_list|()
+operator|.
+name|newDocumentBuilder
+argument_list|()
+decl_stmt|;
+name|Document
+name|doc
+init|=
+name|builder
+operator|.
+name|parse
+argument_list|(
+operator|new
+name|InputSource
+argument_list|(
+operator|new
+name|StringReader
+argument_list|(
+name|conf
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+operator|(
+operator|(
+name|Element
+operator|)
+name|doc
+operator|.
+name|getElementsByTagName
+argument_list|(
+literal|"entity"
+argument_list|)
+operator|.
+name|item
+argument_list|(
+literal|0
+argument_list|)
+operator|)
+operator|.
+name|setAttribute
+argument_list|(
+literal|"threads"
 argument_list|,
-literal|"//str[@name='author'][.='Grant Ingersoll']"
+literal|"1"
+argument_list|)
+expr_stmt|;
+name|Transformer
+name|trans
+init|=
+name|TransformerFactory
+operator|.
+name|newInstance
+argument_list|()
+operator|.
+name|newTransformer
+argument_list|()
+decl_stmt|;
+name|StringWriter
+name|writer
+init|=
+operator|new
+name|StringWriter
+argument_list|()
+decl_stmt|;
+name|trans
+operator|.
+name|transform
+argument_list|(
+operator|new
+name|DOMSource
+argument_list|(
+name|doc
+argument_list|)
 argument_list|,
-literal|"//str[@name='title'][.='solr-word']"
+operator|new
+name|StreamResult
+argument_list|(
+name|writer
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|runFullImport
+argument_list|(
+name|writer
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"*:*"
+argument_list|)
 argument_list|,
-literal|"//str[@name='text']"
+name|tests
 argument_list|)
 expr_stmt|;
 block|}
